--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Workers' Ball 2024 -  Harvesters Gbagada"
+      content="Workers Ball 2024 -  Harvesters Gbagada"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Workers' Ball 2024 -  Harvesters Gbagada</title>
+    <title>Workers Ball 2024 -  Harvesters Gbagada</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
